# word-grid

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VSOpenFileFromDirFilters.json
.github/workflows/: build.yml
assets/: english.json
assets/dictionaries/: .gitignore  common-en.txt  prune.rb
assets/languages/english/: index.json  sowpods+12d.dic
core/: Board.cpp  Board.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  DictionarySearch.hpp  GameData.cpp  GameData.hpp  Grid.cpp  Grid.h  Grid.hpp  GridCoord.hpp  GridElement.cpp  GridElement.hpp  GridElementTraits.hpp  LetterSequence.hpp  ScoredDictionary.cpp  ScoredDictionary.hpp  ScoredWord.hpp  Scoring.cpp  Scoring.hpp  Types.h  Types.hpp  Word.hpp  WordElement.cpp  WordElement.hpp  WordElementTraits.hpp  WordTraits.hpp
core/code/core/: API.h  BasicBoard.hpp  BasicLanguage.cpp  BasicLanguage.hpp  Board.cpp  Board.hpp  BoardBuilder.hpp  BoardUtils.cpp  BoardUtils.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  DictionarySearch.cpp  DictionarySearch.hpp  DictionaryWord.hpp  Grid.cpp  Grid.hpp  GridCoord.hpp  GridDimensions.hpp  GridElement.cpp  GridElement.hpp  GridElementTraits.hpp  GridPath.cpp  GridPath.hpp  GridUtils.cpp  GridUtils.hpp  GridVisiting.hpp  Language.cpp  Language.hpp  LanguageBuilder.cpp  LanguageBuilder.hpp  LanguageTypes.hpp  LetterSequence.hpp  LetterSequenceFromUtf8.hpp  PRNG.cpp  PRNG.hpp  ScoreTraits.hpp  ScoreUtils.cpp  ScoreUtils.hpp  ScoredDictionary.cpp  (+13 more)
core/code/core-old/: Board.cpp  BoardUtils.cpp  GridPath.hpp  ScoredDictionary.cpp  ScoredDictionary.hpp  ScoredWord.hpp  Scoring.hpp  ScoringFlat.cpp  ScoringFlat.hpp  ScoringLength.cpp
core/code/core/lib/: PlatformUtil.cpp  PlatformUtil.hpp  UnicodeCharFromUtf8.hpp  UnicodeTolower.cpp  UnicodeTolower.hpp  UnicodeTolower.inl  Utf8FromUnicodeChar.hpp
core/lib/: PlatformUtil.cpp  PlatformUtil.hpp  UnicodeCharFromUtf8.hpp
core/scorings/: Flat.cpp  Flat.hpp  Length.cpp  Length.hpp  Scrabble.hpp
core/test/: CMakeLists.txt  g-Grids.hpp  t-BoardUtils.cpp  t-Dictionary.cpp  t-DictionarySearch.cpp  t-Grid.cpp  t-GridElement.cpp  t-GridPath.cpp  t-GridUtils.cpp  t-Language.cpp  t-LetterSequence.cpp  t-ScoreUtils.cpp  t-Scoring.cpp  tu-GridPath.hpp  tu-PRNG.hpp
cpm/: doctest.cmake  huse.cmake  icm.cmake  itlib.cmake  splat.cmake  xec.cmake
doc/: README.md  notes.md  todo.md
scratch/: CMakeLists.txt  PlatformUtil.hpp  scratch-b.cpp  scratch.cpp
server/: CMakeLists.txt
server/code/server/: API.h  CMakeLists.txt  Game.hpp  PlatformUtil.cpp  PlatformUtil.hpp  Request.hpp  Session.cpp  Session.hpp
server/code/server/util/: LoadLanguageFromDir.cpp  LoadLanguageFromDir.hpp
server/server/: Board.cpp  Board.hpp  BoardProducer.hpp  BoardProducerPtr.hpp  CMakeLists.txt  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerPtr.hpp  PlayerSet.hpp  Round.hpp  Universe.cpp  Universe.hpp
server/server-old/: Board.cpp  BoardProducer.hpp  BoardProducerPtr.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  PlayerPtr.hpp  PlayerSet.hpp  Universe.cpp  Universe.hpp
server/server/exec/: ExecutionContext.hpp  ExecutorBase.cpp  ExecutorBase.hpp  TaskExecutor.cpp  TaskExecutor.hpp  ThreadExecution.cpp  ThreadExecution.hpp
test/: CMakeLists.txt  g-Grids.hpp  t-Dictionary.cpp  t-Grid.cpp  t-LetterSequence.cpp  t-Scoring.cpp  t-TaskExecutor.cpp  t-TaskScheduling.cpp
